feat: personalize site for marc lanson

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=resizes-content">
-    <title>ben tossell</title>
-    <meta name="description" content="ben tossell's personal terminal - type 'help' to get started">
+    <title>marc lanson</title>
+    <meta name="description" content="marc lanson's personal terminal - type 'help' to get started">
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
-    <meta property="og:title" content="ben tossell">
+    <meta property="og:title" content="marc lanson">
     <meta property="og:description" content="Interactive CLI-style personal website">
     <meta property="og:image" content="assets/images/card.jpg">
     <meta property="og:type" content="website">
@@ -23,7 +23,7 @@
                     <span class="title-btn minimize"></span>
                     <span class="title-btn maximize"></span>
                 </div>
-                <span class="title-text">~/bentossell <a href="https://factory.ai" target="_blank" rel="noopener" class="title-link">droid</a></span>
+                <span class="title-text">~/marclanson <a href="https://factory.ai" target="_blank" rel="noopener" class="title-link">droid</a></span>
                 <div class="title-actions">
                     <button class="help-btn" id="help-btn" aria-label="Show help">?</button>
                 </div>
