style: update terminal branding and introduce new AS/400 theme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="terminal-wrapper">
         <div class="terminal" id="terminal">
             <div class="terminal-title">
-                <span class="title-text">~/marclanson built with <a href="https://factory.ai" target="_blank" rel="noopener" class="title-link">droid</a></span>
+                <span class="title-text">~/marclanson built with <a href="https://factory.ai" target="_blank" rel="noopener" class="title-link">ai</a></span>
                 <div class="title-actions">
                     <button class="help-btn" id="help-btn" aria-label="Show help">?</button>
                 </div>
@@ -55,7 +55,7 @@
                 <div class="status-right">
                     <span class="status-item" id="status-time">--:--</span>
                     <span class="status-sep">|</span>
-                    <span class="status-item status-model" title="my default model atm">Opus 4.5</span>
+                    <span class="status-item status-model" title="my default vibe platform atm">droid</span>
                 </div>
             </div>
         </div>
