refactor: update command shortcuts and enhance responsive styles for better mobile experience

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
         <div class="command-shortcuts">
             <button class="cmd-shortcut" data-cmd="whoami">whoami</button>
-            <button class="cmd-shortcut" data-cmd="tools">tools</button>
+            <button class="cmd-shortcut" data-cmd="contact">contact</button>
         </div>
     </div>
     <script src="assets/js/terminal.js"></script>
