chore: change terminal theme from 'midnight' to 'as400' in HTML and JavaScript files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body class="theme-midnight">
+<body class="theme-as400">
     <div class="terminal-wrapper">
         <div class="terminal" id="terminal">
             <div class="terminal-title">
